<resources>
    <string name="app_name">CtrlGuys</string>
    <string name="Nomeloja">Nome da Loja</string>
    <string name="Endereço">Endereço</string>
    <string name="Informaçao">Informaçao</string>
    <string name="n_pessoas">Capacidade</string>
    <string name="condiçao">Condiçao</string>
    <string name="btnEntrar">Entrar</string>
    <string name="btnSair">Sair</string>
    <string name="Cadastro">Cadastro Pessoa</string>
    <string name="name">Nome</string>
    <string name="Email">E-mail</string>
    <string name="Senha_empresa">Senha</string>
    <string name="Senha_pessoa">Senha</string>
    <string name="btnCadastrar">Cadastrar</string>
    <string name="Cadastro_Empresa">Cadastro Empresa</string>
    <string name="NomeEmpresa">Nome da Empresa</string>
    <string name="horario">Horario</string>
    <string name="Cadastra_Pessoa">Cadastro Pessoa</string>
    <string name="ok">OK</string>
    <string name="erro">Erro</string>
    <string name="conect_db">Conexão criada com sucesso</string>
    <string name="Empresa_info">Informações</string>
</resources>