<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <TextView
        android:id="@+id/info_nome"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/Nomeloja"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/info_lugar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/Endereço"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/info_quantidade2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/Informaçao"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/info_quantidade"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/n_pessoas"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txtViewSinais"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="center"
        android:text="@string/condiçao"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnEntrar"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="#28F344"
        android:gravity="center"
        android:text="@string/btnEntrar"
        android:textColor="#000000"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F14E4E"
        android:duplicateParentState="false"
        android:freezesText="false"
        android:text="@string/btnSair"
        android:textColor="#090909"
        android:textColorHighlight="#FFFFFF"
        android:textStyle="bold" />

</LinearLayout>
